# weiroll-web3

./: .gitignore  README.md  package.json  pyproject.toml
.github/workflows/: lint.yaml  test.yaml
tests/: conftest.py  test_advanced.py  test_basic.py  test_contract_wrapper.py  test_helpers.py  test_weiroll_w3.py
tests/integration/: conftest.py  test_chaining_actions.py  test_curve_add_liquidity.py  test_one_inch.py  test_simple.py  test_swaps.py
weiroll/: __init__.py  client.py  utils.py
