[project]
name = "weiroll-web3"
version = "0.1.0"
description = "Web3.py integration for weiroll"
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["web3>=7.10.0,<8", "eth-abi", "hexbytes"]

[dependency-groups]
dev = ["ruff>=0.11.2", "pytest>=7.4.0,<8", "pytest-cov>=4.1.0,<5"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["weiroll"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
filterwarnings = ["ignore::DeprecationWarning"]
markers = ["integration: marks tests that require a running Anvil node"]